--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 12px;
+
   border: none;
 
   @media (max-width: $max-width-mobile) {
@@ -91,6 +92,7 @@
       padding-top: 25px;
       padding-left: 27px;
       padding-bottom: 25px;
+      height: min-content;
     }
   }
 
@@ -267,6 +269,7 @@
 }
 
 .form__input[type="email"] {
+  padding-right: 45px;
   background-image: url("../../icons/stack.svg#email");
   background-repeat: no-repeat;
   background-size: 20px 20px;
@@ -282,6 +285,7 @@
 }
 
 .form__input[type="tel"] {
+  padding-right: 45px;
   background-image: url("../../icons/stack.svg#phone");
   background-repeat: no-repeat;
   background-size: 15px 15px;
