--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -10,10 +10,10 @@
   @media (min-width: $min-width-desktop) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 206px 165px 152px;
+    grid-template-rows: 206px 1fr 1fr;
     column-gap: 100px;
     padding-top: 0;
-    padding-bottom: 75px;
+    padding-bottom: 65px;
   }
 }
 
@@ -59,7 +59,7 @@
     grid-row: 2 / 3;
 
     margin: 0;
-    padding: 0 128px 0 0;
+    padding: 0 128px 68px 0;
   }
 }
 
@@ -79,8 +79,10 @@
   }
 
   @media (min-width: $min-width-desktop) {
+    // grid-template-rows: 77px min-content;
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+    row-gap: 60px;
     margin: 0;
   }
 }
@@ -124,7 +126,7 @@
 
       flex-direction: row;
       justify-content: flex-start;
-      align-items: end;
+      align-items: start;
       gap: 64px;
     }
   }
@@ -134,7 +136,7 @@
   position: absolute;
   left: 50%;
   bottom: 0;
-  transform: translateX(-50%) translateY(66%);
+  transform: translateX(-50%) translateY(50%);
 
   max-width: 95%;
   padding: 0 15px;
@@ -189,6 +191,10 @@
   @media (min-width: $min-width-tablet) {
     font-size: 30px;
     line-height: 37px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    margin: 15px auto 10px;
   }
 
   &--total {
