--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -58,7 +58,7 @@
 
     @media (min-width: $min-width-tablet) {
       background-size: 268px 200px;
-      background-position: right 29px center;
+      background-position: right 29px top 91px;
     }
 
     @media (min-width: $min-width-desktop) {
