--- a/source/styles/blocks/wrapper.scss
+++ b/source/styles/blocks/wrapper.scss
@@ -3,8 +3,7 @@
     @media (max-width: $max-width-mobile) {
       background:
         linear-gradient(to bottom, rgba($background-color-accent, 0.85) 302px, $background-color-primary 108px),
-        image-set(url("../../images/backgrounds/intro-mobile@1x.jpg") 1x, url("../../images/backgrounds/intro-mobile@2x.jpg") 2x) top center no-repeat,
-        linear-gradient(to bottom, $background-color-substrate 302px, $background-color-primary 108px);
+        image-set(url("../../images/backgrounds/intro-mobile@1x.jpg") 1x, url("../../images/backgrounds/intro-mobile@2x.jpg") 2x) top center no-repeat $background-color-substrate;
     }
 
     @media (min-width: $min-width-desktop) {
@@ -21,8 +20,7 @@
 
         background:
           linear-gradient(to right, rgba($background-color-accent, 0.85), rgba($background-color-accent, 0.85)),
-          image-set(url("../../images/backgrounds/intro-desktop@1x.jpg") 1x, url("../../images/backgrounds/intro-desktop@2x.jpg") 2x) no-repeat,
-          linear-gradient(to right, $background-color-substrate, $background-color-substrate);
+          image-set(url("../../images/backgrounds/intro-desktop@1x.jpg") 1x, url("../../images/backgrounds/intro-desktop@2x.jpg") 2x) no-repeat $background-color-substrate;
       }
     }
   }
