--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,12 +1,8 @@
-.contacts__info-container {
+.contacts__info-and-map-container {
   @media (min-width: $min-width-desktop) {
-    position: relative;
-
-    min-width: $min-width-desktop;
-    width: 100%;
-    max-width: $max-width-desktop;
-    margin: 0 auto;
-    padding: 0 $padding-x-desktop;
+    display: grid;
+    grid-template-columns: 1fr calc(($min-width-desktop) - 2*($padding-x-desktop)) 1fr;
+    grid-template-rows: 95px 1fr 105px;
   }
 }
 
@@ -23,13 +19,14 @@
   }
 
   @media (min-width: $min-width-desktop) {
-    position: absolute;
-    top: 95px;
-    left: 110px;
+    position: relative;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     z-index: 1;
 
     width: 565px;
-    padding: 62px 70px 62px 80px;
+    padding: 60px 70px 60px 80px;
+    margin: 0;
 
     background-color: $background-color-primary;
   }
@@ -111,12 +108,15 @@
   background: center / cover no-repeat image-set(url("../../images/map/map-mobile@1x.png") 1x, url("../../images/map/map-mobile@2x.png") 2x);
 
   @media (min-width: $min-width-tablet) {
-    height: 400px;
+    min-height: 400px;
 
     background: center / cover no-repeat image-set(url("../../images/map/map-tablet@1x.png") 1x, url("../../images/map/map-tablet@2x.png") 2x);
   }
 
   @media (min-width: $min-width-desktop) {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    height: 100%;
     background: center / cover no-repeat image-set(url("../../images/map/map-desktop@1x.png") 1x, url("../../images/map/map-desktop@2x.png") 2x);
   }
 }
